turtleart.housemany.HouseMany.scala.error
Erreur de compilation :
HouseMany:0: error: class HouseMany needs to be abstract, since method ligne4 is not defined
class HouseMany extends Turtle {
      ^